[feat] 알람CRUD 기능 (스크립트 수정 및 config.xml 수정) 구현 완료