@@ -4,25 +4,47 @@ import com.example.backend.exception.CustomException;
 import com.example.backend.exception.ErrorCode;
 import com.example.backend.jenkins.info.model.JenkinsInfo;
 import com.example.backend.jenkins.info.repository.JenkinsInfoRepository;
+import com.example.backend.jenkins.job.model.Script;
+import com.example.backend.jenkins.job.repository.ScriptRepository;
+import com.example.backend.jenkins.job.service.ConfigService;
+import com.example.backend.jenkins.job.service.JobEvent;
 import com.example.backend.jenkins.notification.model.dto.RequestDto;
 import com.example.backend.jenkins.notification.model.dto.ResponseDto;
-import com.example.backend.parser.JenkinsClientFactory;
 import com.example.backend.jenkins.notification.model.JobNotification;
 import com.example.backend.jenkins.job.model.Pipeline;
 import com.example.backend.jenkins.notification.repository.JobNotificationRepository;
 import com.example.backend.jenkins.job.repository.PipelineRepository;
+import com.example.backend.service.HttpClientService;
+import com.example.backend.util.ScriptEditUtil;
 import com.github.mustachejava.Mustache;
 import com.github.mustachejava.MustacheFactory;
 import jakarta.transaction.Transactional;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
+import org.springframework.context.ApplicationEventPublisher;
+import org.springframework.http.*;
 import org.springframework.stereotype.Service;
+import org.w3c.dom.CDATASection;
+import org.w3c.dom.Document;
+import org.w3c.dom.Node;
+import org.w3c.dom.NodeList;
+import org.xml.sax.InputSource;
 
+import javax.xml.parsers.DocumentBuilder;
+import javax.xml.parsers.DocumentBuilderFactory;
+import javax.xml.transform.OutputKeys;
+import javax.xml.transform.Transformer;
+import javax.xml.transform.TransformerFactory;
+import javax.xml.transform.dom.DOMSource;
+import javax.xml.transform.stream.StreamResult;
+import java.io.StringReader;
 import java.io.StringWriter;
-import java.util.HashMap;
-import java.util.List;
-import java.util.Map;
-import java.util.UUID;
+import java.nio.charset.StandardCharsets;
+import java.time.LocalDateTime;
+import java.util.*;
+import java.util.regex.Matcher;
+import java.util.regex.Pattern;
+import java.util.stream.Collectors;
 
 @Service
 @Slf4j
@@ -30,36 +52,59 @@ import java.util.UUID;
 public class JobNotificationService {
 
     private final PipelineRepository pipelineRepository;
+    private final ApplicationEventPublisher publisher;
     private final JobNotificationRepository notificationRepository;
-    private final JenkinsClientFactory jenkinsClientFactory;
+    private final JenkinsClientFactory jenkinsClient;
     private final JenkinsInfoRepository jenkinsInfoRepository;
+    private final ScriptRepository scriptRepository;
+    private final ScriptEditUtil scriptEditUtil;
+    private final ConfigService configService;
+    private final HttpClientService httpClientService;
     private final MustacheFactory mf;
 
     @Transactional
-    public JobNotification createJobNotification(RequestDto.createCredential dto, UUID userId) {
-        Pipeline pipeline = pipelineRepository.findById(dto.getJobId())
-                .orElseThrow(() -> new IllegalArgumentException("Jenkins Pipeline 정보를 찾을 수 없습니다."));
+    public List<JobNotification> createJobNotifications(List<RequestDto.createCredential> dtoList, UUID userId) {
+        List<JobNotification> savedNotifications = new ArrayList<>();
+        Set<UUID> affectedScriptIds = new HashSet<>();
 
-        // UUID 생성 후 앞 8자리 추출
-        String uuidSuffix = UUID.randomUUID().toString().substring(0, 8);
+        for (RequestDto.createCredential dto : dtoList) {
+            UUID pipelineId = null;
 
-        // Credential 이름 생성
-        String credentialName = String.format("%s_%s_%s_%s",
-                dto.getChannel().toUpperCase(),
-                pipeline.getName(),
-                dto.getEventType().toUpperCase(),
-                uuidSuffix
-        );
+            if (dto.getJobId() != null) {
+                pipelineId = pipelineRepository.findById(dto.getJobId())
+                        .map(Pipeline::getId)
+                        .orElse(null);
+            }
 
-        JobNotification notification = dto.toEntity(pipeline, credentialName);
-        JobNotification saved = notificationRepository.save(notification);
+            Script script = scriptRepository.findById(dto.getScriptId())
+                    .orElseThrow(() -> new CustomException(ErrorCode.JENKINS_SCRIPT_NOT_FOUND));
 
-        if (Boolean.TRUE.equals(dto.getShouldNotify())) {
-            JenkinsClientFactory.JenkinsClient client = jenkinsClientFactory.createClientForUser(userId);
-            client.createGlobalCredential(credentialName, dto.getWebhookUrl()).block();
+            affectedScriptIds.add(script.getId());
+
+            String uuidSuffix = UUID.randomUUID().toString().substring(0, 8);
+            String credentialName = String.format("%s_%s_%s_%s",
+                    dto.getChannel().toUpperCase(),
+                    script.getId().toString().substring(0, 8),
+                    dto.getEventType().toUpperCase(),
+                    uuidSuffix
+            );
+
+            JobNotification notification = dto.toEntity(pipelineId, credentialName);
+            JobNotification saved = notificationRepository.save(notification);
+
+            if (Boolean.TRUE.equals(dto.getShouldNotify())) {
+                JenkinsClientFactory.JenkinsClient client = jenkinsClient.createClientForUser(userId);
+                client.createGlobalCredential(credentialName, dto.getWebhookUrl()).block();
+            }
+
+            savedNotifications.add(saved);
         }
 
-        return saved;
+        for (UUID scriptId : affectedScriptIds) {
+            updatePipelineConfigWithScript(scriptId);
+        }
+
+        return savedNotifications;
     }
 
     public List<ResponseDto.JobNotificationListResponseDto> getUserJobNotifications(UUID userId, UUID jobId) {
@@ -83,11 +128,18 @@ public class JobNotificationService {
         JobNotification oldEntity = notificationRepository.findByCredentialName(dto.getCredentialName())
                 .orElseThrow(() -> new CustomException(ErrorCode.JENKINS_NOTIFICATION_NOT_FOUND));
 
-        JobNotification updatedEntity = dto.toEntity(oldEntity);
-        notificationRepository.save(updatedEntity);
+        if (dto.getEventType() != null) oldEntity.setEventType(dto.getEventType());
+        if (dto.getWebhookUrl() != null) oldEntity.setWebhookUrl(dto.getWebhookUrl());
+        if (dto.getShouldNotify() != null) oldEntity.setShouldNotify(dto.getShouldNotify());
 
-        UUID jobId = updatedEntity.getPipeline().getId();
-        createNotifyScript(userId, jobId);
+        notificationRepository.save(oldEntity);
+
+        if (!Objects.equals(dto.getWebhookUrl(), oldEntity.getWebhookUrl())) {
+            JenkinsClientFactory.JenkinsClient client = jenkinsClient.createClientForUser(userId);
+            client.createGlobalCredential(oldEntity.getCredentialName(), oldEntity.getWebhookUrl()).block();
+        }
+
+        updatePipelineConfigWithScript(oldEntity.getScriptId());
     }
 
     @Transactional
@@ -95,53 +147,190 @@ public class JobNotificationService {
         JobNotification notification = notificationRepository.findByCredentialName(dto.getCredentialName())
                 .orElseThrow(() -> new CustomException(ErrorCode.JENKINS_NOTIFICATION_NOT_FOUND));
 
+        UUID scriptId = notification.getScriptId();
         notificationRepository.delete(notification);
 
-        UUID jobId = notification.getPipeline().getId();
-        createNotifyScript(userId, jobId);
-    }
+        // ✨ 인증 정보 포함된 클라이언트 생성
+        JenkinsClientFactory.JenkinsClient client = jenkinsClient.createClientForUser(userId);
+        client.deleteGlobalCredential(dto.getCredentialName()).block();
 
-    @Transactional
-    public void createNotifyScript(UUID userId, UUID jobId) {
-        JenkinsInfo jenkinsInfo = jenkinsInfoRepository.findByUserId(userId)
-                .orElseThrow(() -> new CustomException(ErrorCode.JENKINS_INFO_NOT_FOUND));
-
-        Pipeline pipeline = pipelineRepository.findByJenkinsInfoIdAndId(jenkinsInfo.getId(), jobId)
-                .orElseThrow(() -> new IllegalArgumentException("Jenkins Pipeline 정보를 찾을 수 없습니다."));
-
-        String jobName = pipeline.getName();
-
-        List<JobNotification> notifications = notificationRepository
-                .findByIdAndShouldNotify(jobId, true);
-
-        if (notifications.isEmpty()) {
-            log.info("[JobNotificationService] 전송할 알림이 없습니다.");
-            return;
-        }
-
-        String script = createNotificationScript(jobName, notifications);
-
-//        JenkinsClientFactory.JenkinsClient client = jenkinsClientFactory.createClientForUser(userId);
-//        client.runNotificationScript(script).block();
+        updatePipelineConfigWithScript(scriptId);
     }
 
     private String createNotificationScript(String jobName, List<JobNotification> notifications) {
         Mustache mustache = mf.compile("template/notificationScript.mustache");
 
-        List<Map<String, String>> notificationList = notifications.stream().map(n -> {
-            Map<String, String> entry = new HashMap<>();
+        List<Map<String, Object>> notificationList = notifications.stream().map(n -> {
+            Map<String, Object> entry = new HashMap<>();
             entry.put("eventType", n.getEventType());
             entry.put("credentialId", n.getCredentialName());
             entry.put("webhookUrl", n.getWebhookUrl());
+            entry.put("shouldNotify", Boolean.TRUE.equals(n.getShouldNotify()));
+            entry.put("isSlack", "SLACK".equalsIgnoreCase(n.getChannel()));
+
+            String eventType = Optional.ofNullable(n.getEventType()).orElse("").toUpperCase();
+            entry.put("isBuildSuccess", eventType.equals("BUILD_SUCCESS"));
+            entry.put("isBuildFail", eventType.equals("BUILD_FAIL"));
+
             return entry;
-        }).toList();
+        }).collect(Collectors.toList());
 
         Map<String, Object> context = new HashMap<>();
-        context.put("jobName", jobName);
+        context.put("jobName", jobName != null ? jobName : "");
         context.put("notifications", notificationList);
 
         StringWriter writer = new StringWriter();
         mustache.execute(writer, context);
         return writer.toString();
+    }
+
+    private void updatePipelineConfigWithScript(UUID scriptId) {
+        Script script = scriptRepository.findById(scriptId)
+                .orElseThrow(() -> new CustomException(ErrorCode.JENKINS_SCRIPT_NOT_FOUND));
+
+        List<JobNotification> notifications = notificationRepository.findAllByScriptIdAndShouldNotifyTrue(scriptId);
+
+        String jobName = "";
+        Optional<Pipeline> pipelineOpt = pipelineRepository.findByScriptId(scriptId);
+        if (pipelineOpt.isPresent()) {
+            jobName = pipelineOpt.get().getName();
+        }
+
+        String newPostBlock = createNotificationScript(jobName, notifications);
+
+        String updatedScript = replacePostBlock(script.getScript(), newPostBlock);
+        script.setScript(updatedScript);
+        scriptRepository.save(script);
+
+        if (pipelineOpt.isEmpty()) {
+            log.info("[JobNotificationService] 아직 pipeline이 존재하지 않음. scriptId: {}", scriptId);
+            return;
+        }
+
+        Pipeline pipeline = pipelineOpt.get();
+        String updatedConfigXml = updateScriptInConfigXml(pipeline.getConfig(), updatedScript);
+        pipeline.setConfig(updatedConfigXml);
+        pipeline.setUpdatedAt(LocalDateTime.now());
+        pipelineRepository.save(pipeline);
+
+        updateJenkinsServerConfig(pipeline);
+    }
+
+    private void updateJenkinsServerConfig(Pipeline pipeline) {
+        JenkinsInfo info = pipeline.getJenkinsInfo();
+        if (info == null) {
+            throw new CustomException(ErrorCode.JENKINS_INFO_NOT_FOUND);
+        }
+
+        Script script = pipeline.getScript();
+        if (script == null) {
+            throw new CustomException(ErrorCode.JENKINS_SCRIPT_NOT_FOUND);
+        }
+
+        Map<String, Object> context = new HashMap<>();
+
+        context.put("description", pipeline.getDescription());
+        context.put("trigger", pipeline.getIsTriggered());
+
+        if (script != null) {
+            String githubUrl = Optional.ofNullable(script.getGithubUrl()).orElse("");
+            String rawScript = Optional.ofNullable(script.getScript()).orElse("");
+
+            String injectedScript = scriptEditUtil.injectBooleanParams(rawScript);
+
+            context.put("githubUrl", githubUrl);
+            context.put("script", injectedScript);
+        }
+
+        String configXml = configService.createConfig(context);
+
+        pipeline.setConfig(configXml);
+        pipeline.setUpdatedAt(LocalDateTime.now());
+        Pipeline updated = pipelineRepository.save(pipeline);
+
+        String jenkinsUrl = info.getUri() + "/job/" + pipeline.getName() + "/config.xml";
+        HttpEntity<String> req = new HttpEntity<>(
+                configXml,
+                httpClientService.buildHeaders(
+                        info,
+                        new MediaType("application", "xml", StandardCharsets.UTF_8)
+                )
+        );
+        publisher.publishEvent(new JobEvent.JobUpdatedEvent<>(updated.getId(), jenkinsUrl, HttpMethod.POST, req, String.class));
+    }
+
+    private String replacePostBlock(String originalScript, String newPostBlock) {
+        int postIndex = originalScript.indexOf("post {");
+        if (postIndex == -1) {
+            return originalScript.trim() + "\n\n" + newPostBlock;
+        }
+
+        int braceCount = 0;
+        boolean started = false;
+        int endIndex = -1;
+
+        for (int i = postIndex; i < originalScript.length(); i++) {
+            char c = originalScript.charAt(i);
+
+            if (c == '{') {
+                braceCount++;
+                started = true;
+            } else if (c == '}') {
+                braceCount--;
+                if (braceCount == 0 && started) {
+                    endIndex = i;
+                    break;
+                }
+            }
+        }
+
+        if (endIndex == -1) {
+            throw new IllegalStateException("post 블럭의 끝을 찾을 수 없습니다.");
+        }
+
+        String beforePost = originalScript.substring(0, postIndex).trim();
+        String afterPost = originalScript.substring(endIndex + 1).trim();
+        return beforePost + "\n\n" + newPostBlock + "\n\n" + afterPost;
+    }
+
+    private String updateScriptInConfigXml(String originalXml, String newScript) {
+        try {
+            DocumentBuilderFactory factory = DocumentBuilderFactory.newInstance();
+            DocumentBuilder builder = factory.newDocumentBuilder();
+            Document doc = builder.parse(new InputSource(new StringReader(removeInvalidXMLChars(originalXml))));
+
+            NodeList scripts = doc.getElementsByTagName("script");
+            Node scriptNode = (scripts.getLength() > 0) ? scripts.item(0) : doc.createElement("script");
+
+            CDATASection cdata = doc.createCDATASection(newScript);
+            scriptNode.setTextContent("");
+            scriptNode.appendChild(cdata);
+
+            if (scripts.getLength() == 0) doc.getDocumentElement().appendChild(scriptNode);
+
+            Transformer transformer = TransformerFactory.newInstance().newTransformer();
+            transformer.setOutputProperty(OutputKeys.INDENT, "yes");
+
+            StringWriter writer = new StringWriter();
+            transformer.transform(new DOMSource(doc), new StreamResult(writer));
+            return writer.toString();
+
+        } catch (Exception e) {
+            log.error("Failed to update script in config.xml", e);
+            throw new CustomException(ErrorCode.JENKINS_XML_UPDATE_FAIL);
+        }
+    }
+
+    public static String removeInvalidXMLChars(String input) {
+        StringBuilder out = new StringBuilder();
+        for (char c : input.toCharArray()) {
+            if ((c == 0x9) || (c == 0xA) || (c == 0xD) ||
+                    ((c >= 0x20) && (c <= 0xD7FF)) ||
+                    ((c >= 0xE000) && (c <= 0xFFFD)) ||
+                    ((c >= 0x10000) && (c <= 0x10FFFF))) {
+                out.append(c);
+            }
+        }
+        return out.toString();
     }
 }
